# polygon_texture_experiments

./: .gitignore  .gitmodules  README.md  index.html
arch/: index.html
arch/assets/: vs_constraints.glsl  vs_instance.glsl
assets/: fs_constraints.glsl  fs_framebuffer_tex.glsl  fs_instance.glsl  fs_poly_tex.glsl  vs_basic.glsl  vs_constraints.glsl  vs_framebuffer_tex.glsl  vs_instance.glsl  vs_poly_tex.glsl  vs_polygon.glsl
js_exp/: CMakeLists.txt  main.cpp
js_exp/src/: Constants.hpp  graphmodule.cpp  graphmodule.hpp  graphmodule_render.cpp  graphmodule_support.cpp  poly.cpp  poly.hpp  solver.cpp  solver.hpp  structs.hpp
js_exp/src/functionspace/: ColorMap.h  FunctionPool.cpp  FunctionPool.h  GenerativeArt.h  RandomFunction.h
js_exp/src/poly/: Polygon.cpp  Polygon.h  delaunator.hpp  ofxPolygonDetector.cpp  ofxPolygonDetector.h  polygoncreator.cpp  polygoncreator.hpp  swipline.cpp  swipline.hpp  tinycolormap.hpp
js_exp/src/poly/SweepLine/: event.cpp  event.hpp  point.cpp  point.hpp  segment.cpp  segment.hpp  sweepline.cpp  sweepline.hpp
js_exp/src/poly/colormap/: colormap.h
js_exp/src/poly/colormap/private/: all_colormaps.h
js_exp/src/poly/colormap/private/IDL/: 16_Level.h  Beach.h  Black-White_Linear.h
js_exp/src/support/: Buffer.cpp  Buffer.h  ComputeProcess.cpp  meshData.h  shaderutils.cpp  texture.cpp  texture.hpp
